--- a/backend/api-nocountry/pom.xml
+++ b/backend/api-nocountry/pom.xml
@@ -54,6 +54,14 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <!-- Configuración adicional del plugin Surefire si es necesario -->
+                </configuration>
+        </plugin>
         </plugins>
     </build>
 
