--- a/backend/api-nocountry/pom.xml
+++ b/backend/api-nocountry/pom.xml
@@ -46,12 +46,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>6.0.11</version>
-            <type>jar</type>
-        </dependency>
     </dependencies>
 
     <build>
@@ -59,16 +53,15 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                     <mainClass>com.ecommerce.apinocountry.ApiNocountryApplication</mainClass>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0</version>
-                <configuration>
-                    <!-- Configuración adicional del plugin Surefire si es necesario -->
-                </configuration>
         </plugin>
         </plugins>
     </build>
-
 </project>
