--- a/backend/api-nocountry/src/main/resources/application.properties
+++ b/backend/api-nocountry/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/nocountryapi
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://comfy.cbkxwv6igrpr.us-east-1.rds.amazonaws.com:3306/comfy
+spring.datasource.username=admin
+spring.datasource.password=administrador
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto =update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.servlet.multipart.max-file-size=10MB
