--- a/backend/api-nocountry/src/main/resources/application.properties
+++ b/backend/api-nocountry/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto =update
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.servlet.multipart.max-file-size=10MB
