--- a/.github/workflows/backend_comfy-nocountry.yml
+++ b/.github/workflows/backend_comfy-nocountry.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy WAR app to Azure Web App - comfy-nocountry
 
 on:
@@ -21,7 +18,11 @@ jobs:
         with:
           java-version: '17'
 
+      - name: Debug
+        run: pwd  # Imprime el directorio actual para depuración
+
       - name: Build with Maven
+        run: mvn clean install
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
@@ -50,3 +51,4 @@ jobs:
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_9FAAC96124C341D4904B00582AAF5C85 }}
           package: '*.war'
+
