--- a/backend/api-nocountry/pom.xml
+++ b/backend/api-nocountry/pom.xml
@@ -52,6 +52,31 @@
             <version>6.0.11</version>
             <type>jar</type>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.awspring.cloud/spring-cloud-aws-dependencies -->
+        <dependency>
+            <groupId>io.awspring.cloud</groupId>
+            <artifactId>spring-cloud-aws-dependencies</artifactId>
+            <version>3.0.2</version>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-redis</artifactId>
+    </dependency>
+      <dependency>
+        <groupId>com.amazonaws</groupId>
+        <artifactId>aws-java-sdk-cloudformation</artifactId>
+        <version>1.11.1000</version> <!-- Reemplaza esto con la versión que deseas utilizar -->
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-redis</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>redis.clients</groupId>
+        <artifactId>jedis</artifactId>
+      </dependency>
+
     </dependencies>
 
     <build>
