--- a/.github/workflows/backend_comfy-nocountry.yml
+++ b/.github/workflows/backend_comfy-nocountry.yml
@@ -9,7 +9,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: ./src/main
+        
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
