--- a/.github/workflows/backend_comfy-nocountry.yml
+++ b/.github/workflows/backend_comfy-nocountry.yml
@@ -7,7 +7,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  
+  build:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./
         
     steps:
       - name: Checkout Repository
