--- a/.github/workflows/mgodoyd_comfy-nocountry.yml
+++ b/.github/workflows/mgodoyd_comfy-nocountry.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: '${{ github.workspace }}/target/*.war'
 
   deploy:
     runs-on: ubuntu-latest
@@ -49,5 +49,5 @@ jobs:
         with:
           app-name: 'comfy-nocountry'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_0FE5F5EC34174EF784B07C4FFDFD1A8F }}
-          package: '*.jar'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_52B20F86370446888A424E1DF3F71807 }}
+          package: '*.war'
