--- a/.github/workflows/mgodoyd_comfy-nocountry.yml
+++ b/.github/workflows/mgodoyd_comfy-nocountry.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.war'
+          path: '${{ github.workspace }}/target/*.jar'
 
   deploy:
     runs-on: ubuntu-latest
@@ -50,4 +50,4 @@ jobs:
           app-name: 'comfy-nocountry'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_52B20F86370446888A424E1DF3F71807 }}
-          package: '*.war'
+          package: '*.jar'
