--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.1",
+    "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.7",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.15",
