--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-loading-skeleton": "^3.3.1",
     "react-query": "^3.39.3",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
